Fixes widths and wrapping in footer.

--- a/components/_footer.scss
+++ b/components/_footer.scss
@@ -14,13 +14,15 @@
   .footer-nav {
     @include display-flex;
     @include flex-direction(row);
+    @include flex-wrap(wrap);
     margin: 0 auto;
     padding: 0.25em 0.5em;
 
     max-width: $site-max-width;
 
     .fnav-box {
-      @include flex(1 1 4em);
+      @include flex(1 1 10em);
+      margin-bottom: 1em;
 
 
       h5 {
@@ -31,7 +33,7 @@
       }
 
       &.fnav-wider {
-        @include flex(2 1 8em);
+        @include flex(2 1 20em);
       }
     }
 
